--- a/index.html
+++ b/index.html
@@ -82,6 +82,84 @@
                     <div class="col-md-9">
                         <h2>最近更新文章</h2>
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-01-13">
+                                <div class="col-md-3">
+                                    <a href="/news/article-40082.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/8be83b8774f88a8347879125816b5e62.webp" alt="妙三多猫疫苗剂量（妙三多猫疫苗的不良反应）" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-40082.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">妙三多猫疫苗剂量（妙三多猫疫苗的不良反应）</h3>
+                                    </a>
+                                    <p>摘要：       今天给各位分享妙三多猫疫苗剂量的知识，其中也会对妙三多猫疫苗的不良反应进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、妙三多打一针有用吗?.</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-01-13">
+                                <div class="col-md-3">
+                                    <a href="/news/article-40081.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/ba2d5a03aaf72b56501b25c1e174249b.webp" alt="设计模式——原型模式" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-40081.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">设计模式——原型模式</h3>
+                                    </a>
+                                    <p>阅读原文请访问我的博客BrightLoong's Blog   一. 概述 原型模式（Prototype） ，用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象。 原型模式其实就是从一个对</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-01-12">
+                                <div class="col-md-3">
+                                    <a href="/news/article-39562.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1fd790c0c842e87fd7fc3b1714ac6d9d.webp" alt="人打的疫苗和动物打的疫苗一样吗知乎 人打的疫苗和动物打的疫苗一样吗知乎" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-39562.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">人打的疫苗和动物打的疫苗一样吗知乎 人打的疫苗和动物打的疫苗一样吗知乎</h3>
+                                    </a>
+                                    <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于人打的疫苗和动物打的疫苗一样吗知乎的问题，于是小编就整理了3个相关介绍人打的疫苗和动物打的疫苗一样吗知乎的解答，让我们一起看看吧</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-01-12">
+                                <div class="col-md-3">
+                                    <a href="/news/article-39561.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="动物疫苗注射注意事项及禁忌症是什么 动物疫苗注射注意事项及禁忌症是什么意思" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-39561.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">动物疫苗注射注意事项及禁忌症是什么 动物疫苗注射注意事项及禁忌症是什么意思</h3>
+                                    </a>
+                                    <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗注射注意事项及禁忌症是什么的问题，于是小编就整理了2个相关介绍动物疫苗注射注意事项及禁忌症是什么的解答，让我们一起看看吧</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-01-11">
+                                <div class="col-md-3">
+                                    <a href="/news/article-39085.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/576e2849d154a2569f03a0e1904fcf9e.webp" alt="动物疫苗公司 全球 动物疫苗公司 全球排名第一" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-39085.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">动物疫苗公司 全球 动物疫苗公司 全球排名第一</h3>
+                                    </a>
+                                    <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗公司 全球的问题，于是小编就整理了1个相关介绍动物疫苗公司 全球的解答，让我们一起看看吧。动物界的医生有哪些？动物界的医</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-01-11">
+                                <div class="col-md-3">
+                                    <a href="/news/article-39084.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="动物疫苗打一次管多长时间啊图片大全集（动物疫苗打一次管多长时间啊图片大全集图解）" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-39084.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">动物疫苗打一次管多长时间啊图片大全集（动物疫苗打一次管多长时间啊图片大全集图解）</h3>
+                                    </a>
+                                    <p>摘要：       今天给各位分享动物疫苗打一次管多长时间啊图片大全集的知识，其中也会对动物疫苗打一次管多长时间啊图片大全集图解进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-01-10">
                                 <div class="col-md-3">
                                     <a href="/news/article-38583.htm" class="xcblog-blog-url">
@@ -264,84 +342,6 @@
                                     <p>1.利用Boolean对象进行转换  var num123 = 123, str = 'abc', o = {name:'test'}, num0 = 0; num123 = Boolean(num1</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-01-03">
-                                <div class="col-md-3">
-                                    <a href="/news/article-35059.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/576e2849d154a2569f03a0e1904fcf9e.webp" alt="宠爱国际动物医院工作怎么样 宠爱国际动物医院简介" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-35059.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">宠爱国际动物医院工作怎么样 宠爱国际动物医院简介</h3>
-                                    </a>
-                                    <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠爱国际动物医院工作怎么样的问题，于是小编就整理了3个相关介绍宠爱国际动物医院工作怎么样的解答，让我们一起看看吧。张家港哪里的宠</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-01-03">
-                                <div class="col-md-3">
-                                    <a href="/news/article-35058.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="Java8 Instant 时间戳" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-35058.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">Java8 Instant 时间戳</h3>
-                                    </a>
-                                    <p>在java.util.Date类与LocalDate、LocalDateTime类之间转换中 均可以通过Instant作为中间类完成转换，Instant的使用还是比较方便的，下面介绍Instant的使</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-01-02">
-                                <div class="col-md-3">
-                                    <a href="/news/article-34714.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/050eeaeae15c4f80c45d1b2f1bf69e02.webp" alt="动物疫苗在常温下能放多久呢视频讲解（动物疫苗运输与储存规范）" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-34714.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">动物疫苗在常温下能放多久呢视频讲解（动物疫苗运输与储存规范）</h3>
-                                    </a>
-                                    <p>摘要：       本篇文章给大家谈谈动物疫苗在常温下能放多久呢视频讲解，以及动物疫苗运输与储存规范对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、妙三多猫疫苗常温可以保存..</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-01-02">
-                                <div class="col-md-3">
-                                    <a href="/news/article-34712.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/1fd790c0c842e87fd7fc3b1714ac6d9d.webp" alt="给动物打疫苗的简报怎么写啊（给动物打疫苗的简报怎么写啊图片）" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-34712.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">给动物打疫苗的简报怎么写啊（给动物打疫苗的简报怎么写啊图片）</h3>
-                                    </a>
-                                    <p>摘要：       今天给各位分享给动物打疫苗的简报怎么写啊的知识，其中也会对给动物打疫苗的简报怎么写啊图片进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猫.</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-01-01">
-                                <div class="col-md-3">
-                                    <a href="/news/article-34237.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="查看一个VUE项目的版本" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-34237.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">查看一个VUE项目的版本</h3>
-                                    </a>
-                                    <p>1，进入VUE开发的项目，打开package.json这个文件。  &nbsp;2，打开package.json查看VUE版本。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-01-01">
-                                <div class="col-md-3">
-                                    <a href="/news/article-34236.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="springBoot过滤器、拦截器配置使用" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-34236.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">springBoot过滤器、拦截器配置使用</h3>
-                                    </a>
-                                    <p>拦截器与过滤器的区别 ：  拦截器是基于java的反射机制的，而过滤器是基于函数回调。 拦截器不依赖与servlet容器，过滤器依赖与servlet容器。 拦截器只能对action请求起作用，而过滤器</p>
-                                </div>
-                            </div>
                                                     </div>
                     </div>
                     <div class="col-md-3">
@@ -351,16 +351,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-21137.htm" title="做狗粮的机器多少钱一台（狗粮加工厂投资多少钱）">做狗粮的机器多少钱一台（狗粮加工厂投资多少钱）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-2-free-v2ray-subscribe.htm" title="「1月2日」最高速度21.2M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「1月2日」最高速度21.2M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-20-free-subscribe-node.htm" title="「12月20日」最高速度19.5M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「12月20日」最高速度19.5M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-11-clash-v2ray-ss-ssr.htm" title="「10月11日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「10月11日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-23889.htm" title="python虚拟环境virtualenv">python虚拟环境virtualenv</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-subscribe-node.htm" title="「10月30日」最高速度22.1M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「10月30日」最高速度22.1M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-1-free-v2ray.htm" title="「1月1日」最高速度22.3M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「1月1日」最高速度22.3M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-22055.htm" title="动物疫苗作用机制有哪些（动物注射疫苗）">动物疫苗作用机制有哪些（动物注射疫苗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-17-free-high-speed-nodes.htm" title="「11月17日」最高速度21M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「11月17日」最高速度21M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-26672.htm" title="动物医院起名和其他城市的医院有重复（动物医院起名和其他城市的医院有重复的名字吗）">动物医院起名和其他城市的医院有重复（动物医院起名和其他城市的医院有重复的名字吗）</a></li>
+                        <li class="py-2"><a href="/news/article-27138.htm" title="动物医院好评模板怎么写的啊英文（动物医院好评语）">动物医院好评模板怎么写的啊英文（动物医院好评语）</a></li>
+                        <li class="py-2"><a href="/news/article-37105.htm" title="c++引用折叠">c++引用折叠</a></li>
+                        <li class="py-2"><a href="/news/article-18872.htm" title="动物疫苗接种的目的是什么意思（动物疫苗接种的目的是什么意思啊）">动物疫苗接种的目的是什么意思（动物疫苗接种的目的是什么意思啊）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-27-clash-v2ray-ss-ssr.htm" title="「12月27日」最高速度18.1M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「12月27日」最高速度18.1M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-8-free-node-subscribe-links.htm" title="「10月8日」最高速度21.6M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「10月8日」最高速度21.6M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-28996.htm" title="在C ++ STL中列出swap()">在C ++ STL中列出swap()</a></li>
                         <li class="py-2"><a href="/news/article-21588.htm" title="开宠物店盈利吗现在还有吗（开宠物店到底赚不赚钱）">开宠物店盈利吗现在还有吗（开宠物店到底赚不赚钱）</a></li>
+                        <li class="py-2"><a href="/news/article-32339.htm" title="动物疫苗原材料（动物疫苗原材料有哪些）">动物疫苗原材料（动物疫苗原材料有哪些）</a></li>
+                        <li class="py-2"><a href="/news/article-34237.htm" title="查看一个VUE项目的版本">查看一个VUE项目的版本</a></li>
                     </ul>
     </div>
 </div>
@@ -372,7 +372,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
